# kaeris-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/actions/kaeris-translate/: action.yml  summarize.py
.github/workflows/: i18n-check.example.yml  translate.example.yml
kaeris/: __init__.py  check.py  cli.py  client.py  incremental.py
tests/: test_check.py  test_cli_f15.py  test_incremental.py
